SubVersion: $Id$

Log:

- 17/09/2006, tagged as version 1.0.0: roms
	
- 16/09/2006, version 0.2.9: roms
	- added hw_id field to FlashContent structure

- 08/09/2006, version 0.2.8: roms
	- fixed tifiles_ve_dup
	- fixed grouped.c: check for NULL pointer
	- tigroup.c: use #ifndef __WIN32__ instead of #ifdef __LINUX__ to 
	check for strcasecmp vs. stricmp (kevin)
	- tigroup.c: fixed code typos (missing asterisk, m instead of n)(kevin)
	- fixed computation of checksum with TI8x files
	- fixed tigroup.c: check for NULL pointer
	- check for device/data type in FLASH file 

- 25/08/2006, version 0.2.7: roms
	- checked with ValGring, tested and validated.
	
- 17/08/2006, version 0.2.6: roms
	- added grouping/ungrouping support for TiGroup (eg tigroup.c provides the same API as grouped.c)
		=> note: no functions removed/renamed; just added new ones
	- added tifiles_file_write_flash2 in order not to break API
	- added tifiles_content_dup_regular/flash (not exported)
	- fixed TI8x file support (introduced bug with fortification)
	- added tifiles_build_filename function (which replaces built-in/static code in various 
		places and some built-in code in TiLP).
	- tifiles_content_write_flash: build filename from the last header (=data).
	- fortified group.c: release memory on error exit

- 10/08/2006, version 0.2.5: roms
	- improved TiGroup support API
	- fixed Travis Evans' bug: can't read some TI86 files due to bad padding of varname
		=> there are 4 TI-86 file format!
	- set model_dst to model if dst is not specified (=CALC_NONE)
	- fixed tifiles_has_backup (don't include USB hand-helds)

- 07/08/2006, version 0.2.4: roms
	- fortified rwfile.c
	- fortified files8x.c
	- fortified files9x.c

- 06/08/2006, version 0.2.3: roms
	- target hand-held is passed by tifiles_content_create_xxxx
	- fortified tigroup.c

- 12/07/2006, version 0.2.2: roms
	- variables like 'beta' can't be handled by TiGroup file nor ZIP archives.
	Translate filenames again!